--- a/SiteAcademia/Admin/painel.css
+++ b/SiteAcademia/Admin/painel.css
@@ -236,3 +236,8 @@ footer {
   transform: translateY(50px);
   transition: all 0.8s ease-out;
 }
+
+.fade-in-up.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
